save point: ground fixed, movement and attacks working

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
 </head>
 <body>
+    <script src="src/scenes/TitleScene.js"></script>
+    <script src="src/scenes/GameScene.js"></script>   <!-- Arena 1 -->
+    <script src="src/scenes/Arena2Scene.js"></script> <!-- NEW -->
+    <script src="src/scenes/CutsceneScene.js"></script>
+    <script src="src/scenes/TestScene.js"></script>
+    <script src="src/scenes/SecondScene.js"></script>
     <script src="src/main.js"></script>
 </body>
 </html>
