--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
 </head>
 <body>
+    <script src="src/scenes/ControlsScene.js"></script>
     <script src="src/scenes/TitleScene.js"></script>
     <script src="src/scenes/GameScene.js"></script>   <!-- Arena 1 -->
     <script src="src/scenes/Arena2Scene.js"></script> <!-- NEW -->
