UX: Defeat screen + retry/return flow; hook defeat when player HP<=0; reset state on retry

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="src/scenes/CutsceneScene.js"></script>
     <script src="src/scenes/TestScene.js"></script>
     <script src="src/scenes/SecondScene.js"></script>
+    <script src="src/scenes/DefeatScene.js"></script>
     <script src="src/main.js"></script>
 </body>
 </html>
